--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="google-site-verification" content="gramaGvUBIVcaNbp-MXU3J0Uid2xxnebiPYjY2d0DrQ" />
   <meta
     name="description"
     content="Looking for an emergency electrician Pretoria homeowners trust? Learn what to do during electrical emergencies and how fast professional help can keep your property safe."
